@@ -6,6 +6,7 @@ New features:
 ~~~~~~~~~~~~~
 - Password widget uses a confirmation widget in edit mode.
 - New DirectoryEntry and DirectoryMultiEntries widgets
+- Directory vocabularies can now have an additional empty key.
 Bug fixes:
 ~~~~~~~~~~
 -
